<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    tools:context=".ui.search.SearchFragment"
    tools:ignore="RtlSymmetry">

    <TextView
        android:id="@+id/popularTitle"
        style="@style/SearchSuggestionsTitle"
        android:layout_width="wrap_content"
        android:text="@string/popular_requests"
        app:layout_constraintBottom_toTopOf="@+id/popularList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/refreshButton"
        style="@style/SideActionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="end"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/refresh_button"
        app:layout_constraintBottom_toBottomOf="@+id/popularTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/popularTitle"
        app:layout_constraintTop_toTopOf="@+id/popularTitle" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateDrawable="@drawable/progressbar"
        app:layout_constraintBottom_toBottomOf="@+id/popularList"
        app:layout_constraintEnd_toEndOf="@+id/popularList"
        app:layout_constraintStart_toStartOf="@+id/popularList"
        app:layout_constraintTop_toTopOf="@+id/popularList" />

    <TextView
        android:id="@+id/popularEmptyText"
        style="@style/ListEmptyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_is_empty"
        app:layout_constraintBottom_toBottomOf="@+id/popularList"
        app:layout_constraintEnd_toEndOf="@+id/popularList"
        app:layout_constraintStart_toStartOf="@+id/popularList"
        app:layout_constraintTop_toTopOf="@+id/popularList" />

    <include
        android:id="@+id/popularList"
        layout="@layout/search_suggestions_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/recentTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popularTitle" />

    <include
        android:id="@+id/previousSearchList"
        layout="@layout/search_suggestions_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recentTitle" />

    <TextView
        android:id="@+id/recentTitle"
        style="@style/SearchSuggestionsTitle"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:text="@string/searched_earlier"
        app:layout_constraintBottom_toTopOf="@+id/previousSearchList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popularList" />

    <TextView
        android:id="@+id/clearRecentButton"
        style="@style/SideActionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="end"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/clear_recent_queries"
        app:layout_constraintBottom_toBottomOf="@+id/recentTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/recentTitle"
        app:layout_constraintTop_toTopOf="@+id/recentTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>
